[package]
name = "tsx"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
indexmap = { version = "2.7.1", features = ["serde"] }
path-slash = "0.2.1"
pathdiff = "0.2.3"
percent-encoding = "2.3.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
thiserror = "2.0.11"
url = { version = "2.5.4", features = ["serde"] }

# swc
# docs: https://swc.rs
# crate: https://crates.io/search?q=swc_ecmascript
swc_atoms = "3.1.0"
swc_core = { version = "13.2.0", features = ["ecma_quote" ] }
swc_common = { version = "6.1.0", features = ["sourcemap"] }
swc_ecmascript = { version = "12.0.0", features = ["codegen", "parser", "utils", "visit", "quote"] }
swc_ecma_transforms = { version = "11.0.0", features = ["proposal", "typescript", "react", "optimization"] }

# wasm-bindgen
# docs: https://rustwasm.github.io/docs/wasm-bindgen
wasm-bindgen = { version = "0.2.100" }
serde-wasm-bindgen = "0.6.5"

[profile.release]
# link time optimization using using whole-program analysis
lto = true
# optimization for size (more aggressive)
opt-level = 'z'
# less code to include into binary
panic = 'abort'
# optimization over all codebase (better optimization, slower build)
codegen-units = 1
