[package]
name = "tsx"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
indexmap = { version = "2.9.0", features = ["serde"] }
path-slash = "0.2.1"
pathdiff = "0.2.3"
percent-encoding = "2.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
thiserror = "2.0.12"
url = { version = "2.5.4", features = ["serde"] }

# swc
# docs: https://swc.rs
# crate: https://crates.io/search?q=swc_ecmascript
swc_atoms = "5.0.0"
swc_core = { version = "20.0.0", features = ["ecma_quote" ] }
swc_common = { version = "8.0.1", features = ["sourcemap"] }
swc_ecmascript = { version = "17.0.0", features = ["codegen", "parser", "utils", "visit", "quote"] }
swc_ecma_transforms = { version = "15.0.0", features = ["proposal", "typescript", "react", "optimization"] }

# wasm-bindgen
# docs: https://rustwasm.github.io/docs/wasm-bindgen
wasm-bindgen = { version = "0.2.100" }
serde-wasm-bindgen = "0.6.5"

[profile.release]
# link time optimization using using whole-program analysis
lto = true
# optimization for size (more aggressive)
opt-level = 'z'
# less code to include into binary
panic = 'abort'
# optimization over all codebase (better optimization, slower build)
codegen-units = 1
