[package]
name = "tsx"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
indexmap = { version = "2.13.0", features = ["serde"] }
import_map = "0.25.0"
path-slash = "0.2.1"
pathdiff = "0.2.3"
bytes-str = "0.2.7"
percent-encoding = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
thiserror = "2.0.18"
url = { version = "2.5.8", features = ["serde"] }

# swc
# docs: https://swc.rs
# crate: https://crates.io/search?q=swc_ecmascript
swc_atoms = "9.0.0"
swc_core = { version = "56.0.0", features = ["ecma_quote" ] }
swc_common = { version = "18.0.1", features = ["sourcemap"] }
swc_ecmascript = { version = "52.0.0", features = ["codegen", "parser", "utils", "visit", "quote"] }
swc_ecma_transforms = { version = "46.0.0", features = ["proposal", "typescript", "react", "optimization"] }

# wasm-bindgen
# docs: https://rustwasm.github.io/docs/wasm-bindgen
wasm-bindgen = { version = "0.2.108" }
serde-wasm-bindgen = "0.6.5"

[profile.release]
# link time optimization using using whole-program analysis
lto = true
# optimization for size (more aggressive)
opt-level = 'z'
# less code to include into binary
panic = 'abort'
# optimization over all codebase (better optimization, slower build)
codegen-units = 1
